[package]
name = "gpt4v-discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = "0.11.22"
serde = "1.0.192"
serde_json = "1.0.108"
serenity = "0.11"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
url = "2.4.1"
tracing = "0.1.23"
tracing-subscriber = "0.3"