workspace = { members = ["comfyui-rs"] }
[package]
name = "duckgpt"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
poise = { version = "0.6.1" }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
ollama-rs = "0.1.7"
chrono = "0.4.35"
reqwest = { version = "0.12", features = ["json"] }
# uuid = { version = "1.7", features = ["v4"] }
serde_json = "1.0.114"
# tokio-tungstenite = "0.21.0"
serde = { version = "1.0", features = ["derive"] }
image = { version = "0.25" }
comfyui-rs = { path = "./comfyui-rs" }
log = "0.4"
env_logger = "0.11"
rand = "0.8.5"
base64 = "0.22.0"
